5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1596_1017.log
== TEST (2019-03-30 21:18:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(distancia)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:19:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2)

-- ERROR:
File "XXXX", line 12
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:19:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2)
-- ERROR:
File "XXXX", line 12
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:19:35) 
-- CODE:

from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2)
-- ERROR:
File "XXXX", line 10
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:19:50) 
-- CODE:

from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:21:25) 
-- CODE:

from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:21:40) 
-- CODE:

from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2))
-- EXECUTION TIME:
0.105735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1017/main.py", line 8, in <module>
    distancia=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:23:07) 
-- CODE:

from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    distancia=r*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:23:22) 
-- CODE:

from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2))
-- EXECUTION TIME:
0.11874
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1017/main.py", line 8, in <module>
    distancia=r*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:23:28) 
-- CODE:

from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    distancia=r*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:23:58) 
-- CODE:

from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:24:14) 
-- CODE:

from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("g1")))
t2=radians(float(input("t2")))
g2=radians(float(input("g2")))
r=6371.01
distancia=r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia,2))
-- EXECUTION TIME:
0.119644
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
